<resources>
    <string name="app_name">Messaging</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register_button">REGISTER</string>
    <string name="register_skipButton">Already have an account?</string>
    <string name="login_need_account">I haven\'t got an account.</string>
    <string name="login_button">LOGIN</string>
    <string name="user_image_button_string">SELECT PHOTO</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_new_message">New Message</string>
    <string name="send">SEND</string>
    <string name="new_message">NEW MESSAGE</string>
    <string name="hint_user_image">User image</string>
    <string name="username">Username</string>
</resources>
